# symmetry-math

./: .gitignore  AGENT.md  README.md  pyproject.toml
memory/: JOURNAL.md
src/symmetry_math.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/symmetrymath/: __init__.py  crystal.py  groups.py  orbit.py  transform.py  wallpaper.py
tests/: test_all.py
