[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symmetry-math"
version = "0.1.0"
description = "Mathematics of symmetry groups — the bridge between art and physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "SuperInstance"}]
keywords = ["symmetry", "group theory", "wallpaper groups", "crystallography", "mathematics"]
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/SuperInstance/symmetry-math"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
